--- a/index.css
+++ b/index.css
@@ -11,8 +11,10 @@
   display: flex; /* Гибкий контейнер для выравнивания */
   justify-content: flex-start; /* Текст слева */
   align-items: center; /* Выравнивание по вертикальному центру */
-  border-bottom: 1px solid #ccc; /* Лёгкая линия под каждой задачей */awpmi[daniopwduhoawhudawhupodhuopawdhpuoawhuopduoahpwdhuopawhuopdawhuop]
+  border-bottom: 1px solid #ccc; /* Лёгкая линия под каждой задачей *
 }
+
+function awdawdawdawdwadwa
 
 #task-list li span {
   margin-right: auto; /* Текст занимает всё доступное пространство и отодвигает кнопки вправо */
